fixed image overflow bug

--- a/styles/modules/_globals.css
+++ b/styles/modules/_globals.css
@@ -28,16 +28,6 @@ span {
     padding: 5px;
 }
 
-/*
-h2{
-  
-font-size: 1rem;
-}
-
-h1{
-    font-size: 1.25rem;
-}
-*/
 
 .fa-caret-down {
    color: grey; 
